# RAOS

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: agent-os-architecture.drawio
openspec/changes/bootstrap-agent-os-foundation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/bootstrap-agent-os-foundation/specs/agent-runtime-core/: spec.md
openspec/changes/bootstrap-agent-os-foundation/specs/agent-state-and-events/: spec.md
openspec/changes/bootstrap-agent-os-foundation/specs/operator-control-plane/: spec.md
src/app/: __init__.py  main.py
src/app/api/: __init__.py  app.py  dependencies.py
src/app/api/routers/: __init__.py  agents.py  health.py  tasks.py
src/app/core/: __init__.py  database.py  settings.py
src/app/models/: __init__.py  agent.py  checkpoint.py  enums.py  task.py  tool.py
src/app/providers/: __init__.py  base.py  factory.py  hosted.py  mock.py
src/app/repositories/: __init__.py  agents.py  base.py  tasks.py  tools.py
src/app/runtime/: __init__.py  engine.py  transitions.py  types.py
src/app/schemas/: __init__.py  agent.py  task.py
src/app/services/: __init__.py  agents.py  bootstrap.py  runtime.py  tasks.py
src/app/tools/: __init__.py  bootstrap.py  builtin.py  contracts.py  exceptions.py  gateway.py  registry.py  schema.py
src/app/workers/: __init__.py  celery_app.py
tests/: test_bootstrap.py  test_mock_provider.py  test_runtime_engine.py  test_runtime_transitions.py  test_task_service.py  test_tool_gateway.py
(+1 files in other folders)
